Add Battle #12 - Pilot Battle - #8. Format file

--- a/Battle12-6/index.html
+++ b/Battle12-6/index.html
@@ -76,6 +76,7 @@
   </style>
 </head>
 <body>
+<!-- In order to see this, you must put one responsive node and set width: 400, height: 300 -->
 <div class="a"></div>
 <div class="circle-left"></div>
 <div class="circle-left-down"></div>
