Add Battle #12 - Pilot Battle - #8. Format file. Forgot that you caan choose different figure for each radium corner.

--- a/Battle12-8/index.html
+++ b/Battle12-8/index.html
@@ -24,21 +24,12 @@
       top: 185px;
       background: #824B20;
     }
-    .a-top {
-      position: absolute;
-      top: 90px;
-      left: 140px;
+    .a {
+      margin: 90px auto;
       height: 120px;
       width: 120px;
-      border-radius: 50%;
       background: #E08027;
-    }
-    .a {
-      margin: 145px auto;
-      height: 65px;
-      width: 120px;
-      background: #E08027;
-      border-radius: 0 0 10px 10px;
+      border-radius: 50% 50% 10px 10px;
     }
   </style>
 </head>
@@ -46,7 +37,6 @@
 <!-- In order to see this, you must put one responsive node and set width: 400, height: 300 -->
 <div class="circle-top"></div>
 <div class="circle-bottom"></div>
-<div class="a-top"></div>
 <div class="a"></div>
 </body>
 </html>
